examples/test/testpolicy1261.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1261
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key24: value47
      key12: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value35
      podSelector:
        matchLabels:
          key31: value24
          key36: value17
